[gd_scene load_steps=2 format=3 uid="uid://buk8u6pxakrg6"]

[ext_resource type="Script" uid="uid://ctc0wnsadvk4b" path="res://wallet_usdt.gd" id="1_1nhjd"]

[node name="Wallet_USDT" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nhjd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.233187, 0.390444, 0.643336, 0.686275)

[node name="WalletPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -60.0
offset_right = 52.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="USDTLabel" type="Label" parent="WalletPanel"]
layout_mode = 2

[node name="CardLabel" type="Label" parent="WalletPanel"]
layout_mode = 2

[node name="ToMarketBtn" type="Button" parent="WalletPanel"]
layout_mode = 2
text = "P2P MARKET
"

[node name="Close_wallet" type="Button" parent="WalletPanel"]
layout_mode = 2
text = "Exit
"

[node name="MarketPanel" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -31.0
offset_right = 48.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarketPanel"]
layout_mode = 2
text = "P2P MARKET"

[node name="SellerList" type="VBoxContainer" parent="MarketPanel"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="MarketPanel"]
layout_mode = 2
text = "BACK
"

[node name="DealPanel" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -81.5
offset_right = 48.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="DealInfo" type="Label" parent="DealPanel"]
layout_mode = 2

[node name="AmountEdit" type="LineEdit" parent="DealPanel"]
layout_mode = 2
placeholder_text = "USDT amount"

[node name="CardEdit" type="LineEdit" parent="DealPanel"]
layout_mode = 2
placeholder_text = "Card number"

[node name="CancelDealBtn" type="Button" parent="DealPanel"]
layout_mode = 2
text = "Cancel"

[node name="ConfirmDealBtn" type="Button" parent="DealPanel"]
layout_mode = 2
text = "Create deal"

[node name="WaitPanel" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -58.0
offset_right = 90.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitLabel" type="Label" parent="WaitPanel"]
layout_mode = 2
text = "Ожидание перевода..."

[node name="TimerLabel" type="Label" parent="WaitPanel"]
layout_mode = 2
text = "01:00"

[node name="PB" type="ProgressBar" parent="WaitPanel"]
layout_mode = 2

[node name="Close_wallet" type="Button" parent="WaitPanel"]
layout_mode = 2
text = "Exit
"
